Fixed tool button alignment on the right sidebar

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -99,8 +99,9 @@ html, body {
 .sidebar-hr {
     margin: 10px 0;
 }
-.center {
+.flex-table {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
 }
 /*
